<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/marble"
    android:elevation="4dp"
    android:padding="8dp">

    <!-- Imagen del libro -->
    <ImageView
        android:contentDescription="@string/portada_del_libro"
        android:id="@+id/imgLibro"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_book_juegodetronos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Ícono de favorito -->
    <ImageView
        android:id="@+id/btnFavorito"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/favorito"
        android:src="@drawable/ic_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título del libro -->
    <TextView
        android:id="@+id/tvTituloLibro"
        android:fontFamily="@font/roboto"
        android:gravity="center|start"
        android:text="@string/t_tulo_del_libro"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/bark"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLibro" />

    <!-- Precio del libro -->
    <TextView
        android:id="@+id/tvPrecioLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_000"
        android:textColor="@color/bark"
        app:layout_constraintStart_toStartOf="@+id/tvTituloLibro"
        app:layout_constraintTop_toBottomOf="@id/tvTituloLibro" />

</androidx.constraintlayout.widget.ConstraintLayout>
