<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marble"
    android:padding="50dp">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="134dp"
        android:layout_height="135dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/email_placeholder"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- User Name -->
    <TextView
        android:id="@+id/userName"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username_placeholder"
        android:textAlignment="center"
        android:textColor="@color/bark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage" />

    <!-- User Email -->
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_placeholder"
        android:textAlignment="center"
        android:textColor="@color/bark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <!-- Edit Profile Button -->
    <Button
        android:id="@+id/editProfileButton"
        style="@style/buttonStyle"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/editar_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmail" />

    <!-- Address Button -->
    <Button
        android:id="@+id/addressButton"
        style="@style/buttonStyle"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/tus_direcciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfileButton" />

    <!-- Orders Button -->
    <Button
        android:id="@+id/ordersButton"
        style="@style/buttonStyle"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/tus_pedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressButton" />

    <!-- Contact Us Button -->
    <Button
        android:id="@+id/contactUsButton"
        style="@style/buttonStyle"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ordersButton" />

    <!-- Logout Button -->
    <Button
        android:onClick="previo"
        android:id="@+id/logoutButton"
        style="@style/buttonStyle"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/cerrar_sesi_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactUsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
