<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marble"
    tools:context=".Main_login2">

    <!-- Campo de entrada para el Correo Electrónico -->

    <!-- Campo de entrada para la Contraseña -->

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="260dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/et_pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/button"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/title_activity_login"
        android:textColor="@color/marble"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvOlvidasteContrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <TextView
        android:id="@+id/tvOlvidasteContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/forgotten"
        android:textColor="@color/bark"
        android:textColorHint="@color/bark"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <!-- Botón de inicio de sesión -->

    <!-- Texto para registrar una nueva cuenta -->

    <!-- Texto para recuperar la contraseña -->


</androidx.constraintlayout.widget.ConstraintLayout>