<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marble"

    tools:context=".Main_forgotten">

    <ImageView
        android:id="@+id/id_logo1"
        android:layout_width="196dp"
        android:layout_height="192dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/roboto"
        android:text="@string/texto1"
        android:textColor="@color/bark"
        android:textSize="36sp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_logo1"
        app:layout_constraintVertical_bias="0.821" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="34sp"
        android:gravity="center_vertical"
        android:fontFamily="@font/roboto"
        android:textColor="@color/bark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="21dp"
        android:text="@string/texto2"
        android:textSize="30sp"
        android:gravity="center_vertical"
        android:fontFamily="@font/roboto"
        android:textColor="@color/bark"
        app:layout_constraintBottom_toTopOf="@+id/et_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_recuperar"
        android:layout_width="181dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/texto3"
        android:textColor="@color/marble"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="54dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recuperar"
        app:srcCompat="@android:drawable/ic_media_previous" />

</androidx.constraintlayout.widget.ConstraintLayout>